<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.example.abednego.mwingiregistration.Register">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_second_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_first_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_second_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/second_name" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/layout_radio_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_second_name">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/male" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/female" />
        </RadioGroup>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/layout_age_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_radio_gender"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_group"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/check_below_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/below_18" />

            <CheckBox
                android:id="@+id/check_above_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/above_18" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_home_church"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_age_group">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_fhome_church"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/home_church" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/layout_radio_border_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_home_church">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/border_state"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/border" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/not_border" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_amount_paid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_radio_border_state">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_amount_paid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount_paid"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_amount_paid"
            android:background="@drawable/custom_btn"
            android:text="@string/register"
            android:textColor="#ffffff" />
    </RelativeLayout>
</ScrollView>
